<resources>
    <string name="app_name">Stray Animals</string>
    <string name="intro_text_message">Welcome to Stray Animals App!!!\nThis app is all about helping stray animals to find a place to live</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat">Repeat</string>
    <string name="name">Name</string>
    <string name="email_cant_be_empty">Email cannot be empty</string>
    <string name="password_cant_be_empty">Password cannot be empty</string>
    <string name="name_cant_be_empty">Name cannot be empty</string>
    <string name="passwords_dont_match">Passwords do not match</string>
    <string name="error_while_creating_user">Error while creating user</string>
    <string name="upload">Upload</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="you_have_been_blocked">You have been blocked. Contact: strayanimalsdeveloper@gmail.com</string>
    <string name="edit_account">Edit Account</string>
    <string name="no_posts_found">No Posts Found</string>
    <string name="account_email">"Email: "</string>
    <string name="account_posts">"Posts: "</string>
    <string name="account_phone">"Phone: "</string>
    <string name="account_name">"Name: "</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="select">Select</string>
    <string name="pick_location">Pick Location</string>
    <string name="pick_animal">Animal</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="description">Desciption</string>
    <string name="lost">Lost</string>
    <string name="found">Found</string>
    <string name="lost_or_found">Lost or Found</string>
    <string name="select_lost_or_found">Please select Lost or Found</string>
    <string name="select_image">Please select image</string>
    <string name="select_animal">Please select animal</string>
    <string name="select_location">Please select location</string>
    <string name="phone">Phone</string>
    <string name="fill_description" translatable="false">Fill Description</string>
    <string name="title_activity_show_location" translatable="false">ShowLocationActivity</string>
    <string name="call">Call</string>
    <string name="save">Save</string>
    <string name="phone_cant_be_empty">Phone cannot be empty</string>
    <string name="phone_is_not_valid">Phone is not valid</string>
    <string name="apply" translatable="false">Apply</string>
    <string name="map">Map</string>
    <string name="sheet_title_post">Post</string>
</resources>