<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.EditProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_edit_account"
            style="@style/toolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/edit_account" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sign_card_view_margin"
        android:backgroundTint="?cardBackgroundColor"
        app:cardCornerRadius="@dimen/card_view_radius"
        app:cardElevation="@dimen/card_view_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/ll_in_card_view_padding">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_edit_account_profile"
                android:layout_width="@dimen/account_image_size"
                android:layout_height="@dimen/account_image_size"
                android:layout_marginTop="@dimen/ll_in_card_inside_margin"
                android:src="@drawable/ic_account_placeholder" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ll_in_card_inside_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_edit_account_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/name"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ll_in_card_inside_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_edit_account_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ll_in_card_inside_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_edit_account_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/phone"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save_view_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sign_button_in_card_vertical_margin"
                android:background="@drawable/solid_button_rounded"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/save"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>